--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
     <meta name="theme-color" content="#000000" />
+    <style>
+      #root {
+        width: 100%;
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+      }
+    </style>
 
     <title>React App</title>
   </head>
